# telephony_sms_mms

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  code.diff  ohos.build  sms_mms_aafwk.gni  smsmms.gni
frameworks/cj/: BUILD.gn
frameworks/cj/include/: sms_ffi.h  sms_utils.h
frameworks/cj/src/: sms_ffi.cpp  sms_utils.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/ets/taihe/idl/: ohos.telephony.sms.taihe
frameworks/ets/taihe/include/: ani_callback_common.h  ani_delivery_callback.h  ani_mms_pdu.h  ani_mms_pdu_helper.h  ani_send_callback.h  ani_send_recv_mms.h  ani_sms.h
frameworks/ets/taihe/src/: ani_callback_common.cpp  ani_constructor.cpp  ani_delivery_callback.cpp  ani_mms_pdu.cpp  ani_mms_pdu_helper.cpp  ani_send_callback.cpp  ani_send_recv_mms.cpp  ohos.telephony.sms.impl.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: delivery_callback.h  napi_mms.h  napi_mms_codec.h  napi_mms_pdu.h  napi_mms_pdu_helper.h  napi_send_recv_mms.h  napi_sms.h  napi_sms_util.h  send_callback.h
frameworks/js/napi/src/: delivery_callback.cpp  napi_mms.cpp  napi_mms_codec.cpp  napi_mms_pdu.cpp  napi_mms_pdu_helper.cpp  napi_send_recv_mms.cpp  napi_sms.cpp  napi_sms_util.cpp  send_callback.cpp
frameworks/native/mms/: BUILD.gn
frameworks/native/mms/include/: mms_body.h  mms_body_part.h  mms_body_part_header.h  mms_buffer.h  mms_content_param.h  mms_content_type.h  mms_decode_buffer.h  mms_encode_buffer.h  mms_encode_string.h  mms_header.h  mms_header_categ.h
frameworks/native/mms/src/: mms_address.cpp  mms_attachment.cpp  mms_body.cpp  mms_body_part.cpp  mms_body_part_header.cpp  mms_buffer.cpp  mms_content_param.cpp  mms_content_type.cpp  mms_decode_buffer.cpp  mms_encode_buffer.cpp  mms_encode_string.cpp  mms_header.cpp  mms_header_categ.cpp  mms_msg.cpp
frameworks/native/sms/: BUILD.gn
sa_profile/: 4008.json  (+3 more)
test/: BUILD.gn  sms_mms_test.gni
test/fuzztest/: BUILD.gn
test/fuzztest/addsimmessage_fuzzer/: BUILD.gn  addsimmessage_fuzzer.cpp  addsimmessage_fuzzer.h
test/fuzztest/cdmasmsdecode_fuzzer/: BUILD.gn  cdmasmsdecode_fuzzer.cpp  cdmasmsdecode_fuzzer.h  project.xml
test/fuzztest/cdmasmsencode_fuzzer/: BUILD.gn  cdmasmsencode_fuzzer.cpp  cdmasmsencode_fuzzer.h
test/fuzztest/cdmasmsmessage_fuzzer/: BUILD.gn  cdmasmsmessage_fuzzer.cpp  cdmasmsmessage_fuzzer.h  project.xml
test/fuzztest/common_fuzzer/: addsmstoken_fuzzer.cpp  addsmstoken_fuzzer.h
test/fuzztest/createsmsmessage_fuzzer/: BUILD.gn  createsmsmessage_fuzzer.cpp  createsmsmessage_fuzzer.h  project.xml
test/fuzztest/databasedsmsdelivery_fuzzer/: BUILD.gn  databasedsmsdelivery_fuzzer.cpp  databasedsmsdelivery_fuzzer.h
test/fuzztest/getsmssegmentsinfo_fuzzer/: BUILD.gn  getsmssegmentsinfo_fuzzer.cpp  getsmssegmentsinfo_fuzzer.h
test/fuzztest/gsmsmsmessage_fuzzer/: BUILD.gn  gsmsmsmessage_fuzzer.cpp  gsmsmsmessage_fuzzer.h
test/fuzztest/gsmsmsparamcodec_fuzzer/: BUILD.gn  gsmsmsparamcodec_fuzzer.cpp  gsmsmsparamcodec_fuzzer.h
test/fuzztest/gsmsmssender_fuzzer/: BUILD.gn  gsmsmssender_fuzzer.cpp  gsmsmssender_fuzzer.h
test/fuzztest/sendmessage_fuzzer/: BUILD.gn  delivery_send_call_back_stub.h  send_call_back_stub.cpp  send_call_back_stub.h  sendmessage_fuzzer.cpp  sendmessage_fuzzer.h
test/fuzztest/sendmessagedata_fuzzer/: BUILD.gn  delivery_send_call_back_stub.cpp  delivery_send_call_back_stub.h  send_call_back_stub.h  sendmessagedata_fuzzer.cpp  sendmessagedata_fuzzer.h
test/fuzztest/setgetcbconfig_fuzzer/: BUILD.gn  setgetcbconfig_fuzzer.cpp  setgetcbconfig_fuzzer.h
test/fuzztest/setgetsmsc_fuzzer/: BUILD.gn  setgetsmsc_fuzzer.cpp  setgetsmsc_fuzzer.h
test/fuzztest/smseventissue_fuzzer/: BUILD.gn  smseventissue_fuzzer.cpp  smseventissue_fuzzer.h
test/fuzztest/smspdubuffer_fuzzer/: BUILD.gn  smspdubuffer_fuzzer.cpp  smspdubuffer_fuzzer.h
test/fuzztest/smsrecvitem_fuzzer/: BUILD.gn  project.xml  smsrecvitem_fuzzer.cpp  smsrecvitem_fuzzer.h
test/fuzztest/splitmessage_fuzzer/: BUILD.gn  splitmessage_fuzzer.cpp  splitmessage_fuzzer.h
test/fuzztest/textbasedsmsdelivery_fuzzer/: BUILD.gn  textbasedsmsdelivery_fuzzer.cpp  textbasedsmsdelivery_fuzzer.h
test/fuzztest/unittest_fuzzer/: BUILD.gn  unittest_fuzzer.cpp  unittest_fuzzer.h
test/fuzztest/unittesttwo_fuzzer/: BUILD.gn  unittesttwo_fuzzer.cpp  unittesttwo_fuzzer.h
test/fuzztest/updatesimmessage_fuzzer/: BUILD.gn  updatesimmessage_fuzzer.cpp  updatesimmessage_fuzzer.h
test/fuzztest/wappushbuffer_fuzzer/: BUILD.gn  wappushbuffer_fuzzer.cpp  wappushbuffer_fuzzer.h
test/gtest/: BUILD.gn  cb_gtest.cpp  cdma_sms_gtest.cpp  mms_cdma_gtest.cpp  mms_gtest.cpp  mms_receiver_mgr_gtest.cpp  sms_broadcast_subscriber_gtest.cpp  sms_broadcast_subscriber_gtest.h  sms_delivery_callback_gtest.cpp  sms_delivery_callback_gtest.h  sms_gsm_gtest.cpp  sms_gtest.cpp  sms_ims_service_interaction_gtest.cpp  sms_mms_common_test.cpp  sms_mms_gtest.cpp  sms_mms_gtest.h  sms_mms_receive_gtest.cpp  sms_mms_test_helper.cpp  sms_mms_test_helper.h  sms_satellite_gtest.cpp  sms_send_callback_gtest.cpp  sms_send_callback_gtest.h  sms_service_proxy_gtest.cpp  sms_services_mms_gtest.cpp  sms_utils_gtest.cpp  zero_branch_cb_test.cpp  zero_branch_cdma_sms_test.cpp  zero_branch_mms_test.cpp  zero_branch_sms_part1_test.cpp  zero_branch_sms_part_test.cpp  zero_branch_sms_test.cpp  zero_branch_test.cpp  zero_branch_utils_test.cpp
test/gtest/mock/: mock_data_share_helper.h  mock_data_share_result_set.h  mock_ims_core_service_interface.h  mock_ims_sms_callback_interface.h  mock_ims_sms_interface.h  mock_remote_object.h  mock_sim_manager.h
test/unittest/: BUILD.gn  access_mms_token.h  cdma_sms_test.cpp  cdma_sms_test.h  gsm_sms_sender_test.cpp  gsm_sms_sender_test.h  mms_msg_test.cpp  mms_msg_test.h  short_message_test.cpp  short_message_test.h  sms_broadcast_subscriber.cpp  sms_broadcast_subscriber.h  sms_cb_message_test.cpp  sms_cb_message_test.h  sms_delivery_callback_test.cpp  sms_delivery_callback_test.h  sms_gsm_message_test.cpp  sms_gsm_message_test.h  sms_mms_test.cpp  sms_send_callback_test.cpp  sms_send_callback_test.h
(+341 files in other folders)
