# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# GLIB - Library of useful routines for C programming

import("//base/telephony/core_service/telephony.gni")
import("//base/telephony/sms_mms/sms_mms_aafwk.gni")
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/sms_mms"

config("tel_sms_mms_config") {
  visibility = [ "./*" ]
  include_dirs = [
    "utils",
    "services/include",
    "services/include/cdma",
    "services/include/gsm",
  ]
}

ohos_shared_library("tel_sms_mms") {
  sources = [
    "$SOURCE_DIR/frameworks/native/sms/src/short_message.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_message.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_pdu_codec.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_receive_handler.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_sender.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_cb_handler.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_message.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_param_codec.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_receive_handler.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_sender.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_tpdu_codec.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_udata_codec.cpp",
    "$SOURCE_DIR/services/ims_reg_state_callback_stub.cpp",
    "$SOURCE_DIR/services/ims_service_interaction/src/ims_sms_callback_stub.cpp",
    "$SOURCE_DIR/services/ims_service_interaction/src/ims_sms_client.cpp",
    "$SOURCE_DIR/services/ims_service_interaction/src/ims_sms_proxy.cpp",
    "$SOURCE_DIR/services/proxy/sms_delivery_short_message_proxy.cpp",
    "$SOURCE_DIR/services/proxy/sms_send_short_message_proxy.cpp",
    "$SOURCE_DIR/services/sms_base_message.cpp",
    "$SOURCE_DIR/services/sms_cb_message.cpp",
    "$SOURCE_DIR/services/sms_dump_helper.cpp",
    "$SOURCE_DIR/services/sms_interface_manager.cpp",
    "$SOURCE_DIR/services/sms_interface_stub.cpp",
    "$SOURCE_DIR/services/sms_misc_manager.cpp",
    "$SOURCE_DIR/services/sms_network_policy_manager.cpp",
    "$SOURCE_DIR/services/sms_persist_helper.cpp",
    "$SOURCE_DIR/services/sms_receive_handler.cpp",
    "$SOURCE_DIR/services/sms_receive_indexer.cpp",
    "$SOURCE_DIR/services/sms_receive_manager.cpp",
    "$SOURCE_DIR/services/sms_send_indexer.cpp",
    "$SOURCE_DIR/services/sms_send_manager.cpp",
    "$SOURCE_DIR/services/sms_sender.cpp",
    "$SOURCE_DIR/services/sms_service.cpp",
    "$SOURCE_DIR/services/sms_state_handler.cpp",
    "$SOURCE_DIR/services/sms_state_observer.cpp",
    "$SOURCE_DIR/services/sms_wap_push_buffer.cpp",
    "$SOURCE_DIR/services/sms_wap_push_content_type.cpp",
    "$SOURCE_DIR/services/sms_wap_push_handler.cpp",
    "$SOURCE_DIR/utils/msg_text_convert.cpp",
    "$SOURCE_DIR/utils/sms_common_utils.cpp",
    "$SOURCE_DIR/utils/sms_hisysevent.cpp",
    "$SOURCE_DIR/utils/string_utils.cpp",
  ]

  include_dirs = [
    ":tel_sms_mms_config",
    "//base/telephony/sms_mms/interfaces/innerkits/",
    "//base/telephony/sms_mms/frameworks/native/sms/include",
    "//base/telephony/sms_mms/interfaces/innerkits/ims",
    "//third_party/glib/glib",
    "//third_party/glib",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "$SOURCE_DIR/frameworks/native:tel_sms_mms_api",
    "${ability_runtime_inner_api_path}/ability_manager:ability_manager",
    "${ability_runtime_path}/frameworks/native/ability/native:data_ability_helper",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//base/telephony/sms_mms/frameworks/native/mms:mms_native_source",
    "//third_party/glib:glib_packages",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_core",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"SmsMms\"",
    "LOG_DOMAIN = 0xD001F06",
  ]

  public_configs = [ ":tel_sms_mms_config" ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
    external_deps += [ "init:libbegetutil" ]
  }

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
