# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# GLIB - Library of useful routines for C programming

import("//build/ohos.gni")

config("tel_sms_mms_config") {
  visibility = [ "./*" ]
  include_dirs = [
    "utils",
    "services/include",
    "services/include/cdma",
    "services/include/gsm",
  ]
}

ohos_shared_library("tel_sms_mms") {
  sources = [
    "frameworks/native/sms/src/short_message.cpp",
    "services/cdma/cdma_sms_message.cpp",
    "services/cdma/cdma_sms_pdu_codec.cpp",
    "services/cdma/cdma_sms_receive_handler.cpp",
    "services/cdma/cdma_sms_sender.cpp",
    "services/gsm/gsm_sms_cb_handler.cpp",
    "services/gsm/gsm_sms_message.cpp",
    "services/gsm/gsm_sms_param_codec.cpp",
    "services/gsm/gsm_sms_receive_handler.cpp",
    "services/gsm/gsm_sms_sender.cpp",
    "services/gsm/gsm_sms_tpdu_codec.cpp",
    "services/gsm/gsm_sms_udata_codec.cpp",
    "services/ims_reg_state_callback_stub.cpp",
    "services/ims_service_interaction/src/ims_sms_callback_stub.cpp",
    "services/ims_service_interaction/src/ims_sms_client.cpp",
    "services/ims_service_interaction/src/ims_sms_proxy.cpp",
    "services/proxy/sms_delivery_short_message_proxy.cpp",
    "services/proxy/sms_send_short_message_proxy.cpp",
    "services/runner_pool.cpp",
    "services/sms_base_message.cpp",
    "services/sms_broadcast_subscriber_receiver.cpp",
    "services/sms_cb_message.cpp",
    "services/sms_dump_helper.cpp",
    "services/sms_interface_manager.cpp",
    "services/sms_interface_stub.cpp",
    "services/sms_misc_manager.cpp",
    "services/sms_network_policy_manager.cpp",
    "services/sms_pdu_buffer.cpp",
    "services/sms_persist_helper.cpp",
    "services/sms_receive_handler.cpp",
    "services/sms_receive_indexer.cpp",
    "services/sms_receive_manager.cpp",
    "services/sms_receive_reliability_handler.cpp",
    "services/sms_send_indexer.cpp",
    "services/sms_send_manager.cpp",
    "services/sms_sender.cpp",
    "services/sms_service.cpp",
    "services/sms_state_handler.cpp",
    "services/sms_state_observer.cpp",
    "services/sms_wap_push_buffer.cpp",
    "services/sms_wap_push_content_type.cpp",
    "services/sms_wap_push_handler.cpp",
    "utils/msg_text_convert.cpp",
    "utils/sms_common_utils.cpp",
    "utils/sms_hisysevent.cpp",
    "utils/string_utils.cpp",
  ]

  include_dirs = [
    ":tel_sms_mms_config",
    "interfaces/innerkits/",
    "frameworks/native/sms/include",
    "interfaces/innerkits/ims",
    "//third_party/glib/glib",
    "//third_party/glib",
  ]

  deps = [
    "frameworks/native:tel_sms_mms_api",
    "frameworks/native/mms:mms_native_source",
    "//third_party/glib:glib_packages",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_single",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "telephony_data:tel_telephony_data",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SmsMms\"",
    "LOG_DOMAIN = 0xD001F06",
  ]

  public_configs = [ ":tel_sms_mms_config" ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
    external_deps += [ "init:libbegetutil" ]
  }

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
