# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# GLIB - Library of useful routines for C programming

import("//build/ohos.gni")

config("tel_sms_mms_config") {
  visibility = [ "./*" ]
  include_dirs = [
    "utils",
    "services/sms/include",
    "services/sms/include/cdma",
    "services/sms/include/gsm",
    "services/sms/include/satellite",
    "services/mms/include",
  ]
}

ohos_shared_library("tel_sms_mms") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "frameworks/native/sms/src/short_message.cpp",
    "services/mms/data_request.cpp",
    "services/mms/mms_apn_info.cpp",
    "services/mms/mms_conn_callback_stub.cpp",
    "services/mms/mms_network_client.cpp",
    "services/mms/mms_network_manager.cpp",
    "services/mms/mms_persist_helper.cpp",
    "services/mms/mms_receive.cpp",
    "services/mms/mms_receive_manager.cpp",
    "services/mms/mms_send_manager.cpp",
    "services/mms/mms_sender.cpp",
    "services/sms/cdma/cdma_sms_message.cpp",
    "services/sms/cdma/cdma_sms_parameter_record.cpp",
    "services/sms/cdma/cdma_sms_receive_handler.cpp",
    "services/sms/cdma/cdma_sms_sender.cpp",
    "services/sms/cdma/cdma_sms_sub_parameter.cpp",
    "services/sms/cdma/cdma_sms_teleservice_message.cpp",
    "services/sms/cdma/cdma_sms_transport_message.cpp",
    "services/sms/gsm/cb_start_ability.cpp",
    "services/sms/gsm/gsm_sms_cb_handler.cpp",
    "services/sms/gsm/gsm_sms_common_utils.cpp",
    "services/sms/gsm/gsm_sms_message.cpp",
    "services/sms/gsm/gsm_sms_param_codec.cpp",
    "services/sms/gsm/gsm_sms_param_decode.cpp",
    "services/sms/gsm/gsm_sms_param_encode.cpp",
    "services/sms/gsm/gsm_sms_receive_handler.cpp",
    "services/sms/gsm/gsm_sms_sender.cpp",
    "services/sms/gsm/gsm_sms_tpdu_codec.cpp",
    "services/sms/gsm/gsm_sms_tpdu_decode.cpp",
    "services/sms/gsm/gsm_sms_tpdu_encode.cpp",
    "services/sms/gsm/gsm_user_data_decode.cpp",
    "services/sms/gsm/gsm_user_data_encode.cpp",
    "services/sms/gsm/gsm_user_data_pdu.cpp",
    "services/sms/gsm_cb_codec.cpp",
    "services/sms/gsm_cb_gsm_codec.cpp",
    "services/sms/gsm_cb_pdu_decode_buffer.cpp",
    "services/sms/gsm_cb_umts_codec.cpp",
    "services/sms/ims_reg_state_callback_stub.cpp",
    "services/sms/ims_service_interaction/src/ims_sms_callback_stub.cpp",
    "services/sms/ims_service_interaction/src/ims_sms_client.cpp",
    "services/sms/ims_service_interaction/src/ims_sms_proxy.cpp",
    "services/sms/proxy/sms_delivery_short_message_proxy.cpp",
    "services/sms/proxy/sms_send_short_message_proxy.cpp",
    "services/sms/satellite_service_interaction/src/satellite_sms_callback.cpp",
    "services/sms/satellite_service_interaction/src/satellite_sms_callback_stub.cpp",
    "services/sms/satellite_service_interaction/src/satellite_sms_client.cpp",
    "services/sms/satellite_service_interaction/src/satellite_sms_proxy.cpp",
    "services/sms/sms_base_message.cpp",
    "services/sms/sms_broadcast_subscriber_receiver.cpp",
    "services/sms/sms_dump_helper.cpp",
    "services/sms/sms_interface_manager.cpp",
    "services/sms/sms_interface_stub.cpp",
    "services/sms/sms_misc_manager.cpp",
    "services/sms/sms_network_policy_manager.cpp",
    "services/sms/sms_pdu_buffer.cpp",
    "services/sms/sms_persist_helper.cpp",
    "services/sms/sms_receive_handler.cpp",
    "services/sms/sms_receive_indexer.cpp",
    "services/sms/sms_receive_manager.cpp",
    "services/sms/sms_receive_reliability_handler.cpp",
    "services/sms/sms_send_indexer.cpp",
    "services/sms/sms_send_manager.cpp",
    "services/sms/sms_sender.cpp",
    "services/sms/sms_service.cpp",
    "services/sms/sms_state_handler.cpp",
    "services/sms/sms_state_observer.cpp",
    "services/sms/sms_wap_push_buffer.cpp",
    "services/sms/sms_wap_push_content_type.cpp",
    "services/sms/sms_wap_push_handler.cpp",
    "utils/sms_common_utils.cpp",
    "utils/sms_hisysevent.cpp",
    "utils/string_utils.cpp",
    "utils/text_coder.cpp",
  ]

  include_dirs = [
    ":tel_sms_mms_config",
    "interfaces/innerkits/",
    "frameworks/native/sms/include",
    "interfaces/innerkits/ims",
    "//third_party/curl/include",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
  ]

  deps = [
    "frameworks/native:tel_sms_mms_api",
    "frameworks/native/mms:mms_native_source",
    "//third_party/curl:curl",
    "//third_party/glib:glib_packages",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
    "netstack:http_client",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "telephony_data:tel_telephony_data",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SmsMms\"",
    "LOG_DOMAIN = 0xD001F06",
  ]

  public_configs = [ ":tel_sms_mms_config" ]

  if (is_standard_system) {
    external_deps += [ "init:libbegetutil" ]
  }

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
