# Copyright (C) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  sms_mms_dynamic_start = false
  sms_mms_tel_power_mode = false
  sms_mms_feature_support_mms = true
}

global_defines = []

if (sms_mms_tel_power_mode) {
  global_defines += [ "BASE_POWER_IMPROVEMENT_FEATURE" ]
}

if (sms_mms_feature_support_mms) {
  global_defines += [ "SMS_SUPPORT_MMS" ]
}  