# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SMS_MMS_SOURCE_DIR = "../../"
ohos_unittest("tel_sms_mms_gtest") {
  subsystem_name = "telephony"
  part_name = "sms_mms"
  test_module = "tel_sms_mms_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "mms_gtest.cpp",
    "sms_broadcast_subscriber_gtest.cpp",
    "sms_delivery_callback_gtest.cpp",
    "sms_mms_test_helper.cpp",
    "sms_send_callback_gtest.cpp",
  ]

  include_dirs = [
    "$SMS_MMS_SOURCE_DIR/services/include",
    "$SMS_MMS_SOURCE_DIR/interfaces/innerkits",
    "$SMS_MMS_SOURCE_DIR/interfaces/kits/native",
    "$SMS_MMS_SOURCE_DIR/frameworks/native/sms/include",
    "$SMS_MMS_SOURCE_DIR/utils",
  ]

  deps = [
    "$SMS_MMS_SOURCE_DIR:tel_sms_mms",
    "$SMS_MMS_SOURCE_DIR/frameworks/native:tel_sms_mms_api",
    "//third_party/curl:curl",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:data_ability_helper",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "init:libbegetutil",
    "ipc:ipc_single",
    "netmanager_base:net_conn_manager_if",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"SmsMmmsGtest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_sms_mms_gtest" ]
}
